--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,32 +7,90 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.example.administrator.simplespantextview.MainActivity">
+    <TextView
+        android:layout_width="wrap_content"
+        android:text="kotlin"
+
+        android:layout_height="wrap_content"/>
     <!--kotlin代码实现-->
     <com.huizhuang.zxsq.widget.textview.SpanTextView
 
         android:id="@+id/tv_spantext"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="《%武动乾坤%》是连载在起点
-        中文网的一部东方%玄幻小说%，作者是
-        起点白金作家%天蚕土豆%。"
+        android:text="常用的span格式%简单封装%,XML中完成所有操作，%加粗%，%改色%，%改大小%，用kotlin和java格式的都有"
+        android:textColor="#000000"
         android:textSize="14dp"
-        app:spanBold="0,1"
-        app:spanColor="#22c2cc,#ffc2cc,#ff6c38"
-        app:spanSeparator="%"
-        app:spanSize="18,14"
         />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:text="java"
+        android:layout_marginTop="20dp"
+        android:layout_height="wrap_content"/>
     <!--java代码实现-->
     <com.example.spantextviewjava.SpanText
         android:id="@+id/tv_spantext_java"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+
+        android:text="常用的span格式%简单封装%,XML中完成所有操作，%加粗%，%改色%，%改大小%，用kotlin和java格式的都有"
+        android:textColor="#000000"
+        android:textSize="14dp"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:text="原始文本："
         android:layout_marginTop="20dp"
-        android:text="%《武动乾坤%》是连载在起点
-        中文网的一部东方%玄幻小说%，作者是
-        起点白金作家%天蚕土豆%。"
-        android:textSize="14dp"
-        app:spanBold="0,1"
-        app:spanColor="#22c2cc,#ffc2cc,#ff6c38"
-        app:spanSeparator="%"/>
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/tv_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:text="原始文本："
+        android:textColor="#000000"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/btn_color"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="改变颜色"/>
+
+        <Button
+            android:id="@+id/btn_size"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="改变大小"/>
+
+        <Button
+            android:id="@+id/btn_bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="改变加粗"/>
+
+        <Button
+            android:id="@+id/btn_insert"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="onClick"
+            android:text="插入分隔符"/>
+
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/btn_chang_separator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onClick"
+        android:text="修改分隔符"/>
+
 </LinearLayout>
